--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,7 @@
 #
 # Copyright 2024 林博仁(Buo-ren Lin) <buo.ren.lin@gmail.com>
 # SPDX-License-Identifier: CC-BY-SA-4.0
+[submodule "Jekyll"]
+	path = Jekyll
+	url = https://gitlab.com/libre-knowledge/jekyll.git
+	ignore = dirty
