fix(legal): Fix incorrect path annotation for the subject avatar icon
Signed-off-by: 林博仁(Buo-ren Lin) <buo.ren.lin@gmail.com>

--- a/doc-assets/REUSE.toml
+++ b/doc-assets/REUSE.toml
@@ -12,7 +12,7 @@ version = 1
 
 [[annotations]]
 path = [
-    "/subject-avatar-icon.jpg"
+    "subject-avatar-icon*.jpg"
 ]
 SPDX-FileCopyrightText = '1970 AI generated image, no copyright. <http://www.wtfpl.net/>'
 SPDX-License-Identifier = 'WTFPL'
